# camt053-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  SUPPORT.md  glama.json  pyproject.toml  server.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cflite-cron.yml  cflite-pr.yml  ci.yml  codeql.yml  mcp-inspect.yml  mcp-registry.yml  publish-mcp.yml  release.yml  scorecard.yml
bench/: load_test.py
bench/k6/: mcp_load.js
camt053_mcp/: __init__.py  auditing.py  classify.py  export_journal.py  oauth.py  observability.py  rulebook.py  server.py  transport.py
docs/: BENCHMARKS.md  deployment-cookbook.md  iso20022-mcp-servers-compared.md  quickstart.md
examples/: 01_list_message_types.py  02_list_return_reasons.py  03_get_required_fields.py  04_get_input_schema.py  05_validate_records.py  06_validate_identifier.py  07_parse_statement.py  08_validate_statement.py  09_check_cbpr_readiness.py  10_get_cbpr_cutover_date.py  11_list_entries.py  12_filter_entries.py  13_generate_reversal.py  14_cite_rulebook.py  README.md  mcp_tools.py
examples/_data/: sample_statement.xml
fuzz/: fuzz_parser.py
requirements/: build.txt  fuzz.in  fuzz.txt  lint.in  lint.txt  sbom.txt  security.txt  test.in  test.txt
tests/: conftest.py  test_audit_chain.py  test_classify.py  test_examples.py  test_export_journal.py  test_mcp_server.py  test_oauth.py  test_observability.py  test_rulebook.py  test_stress.py  test_transport.py  test_version.py
