[tool.poetry]
name = "camt053-mcp"
version = "0.0.14"
description = "Model Context Protocol (MCP) server exposing the camt053 ISO 20022 Bank Statement library as agent tools."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/camt053-mcp"
homepage = "https://sebastienrousseau.github.io/camt053/"
packages = [
    { include = "camt053_mcp" },
]

[tool.poetry.scripts]
camt053-mcp = "camt053_mcp.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
camt053 = ">=0.0.6,<1"
camt053-loader-mt940 = ">=0.0.9"
camt053-loader-mt942 = ">=0.0.1"
mcp = ">=1.2"
# OAuth 2.1 resource-server JWT validation (camt053_mcp.oauth): PyJWT
# is already in the tree via the MCP SDK, but we import it directly so
# it is pinned explicitly; [crypto] guarantees RSA/EC JWKS support.
pyjwt = { version = ">=2.10,<3", extras = ["crypto"] }
# Async JWKS fetching (also already transitive via the MCP SDK).
httpx = ">=0.27,<1"
# Prometheus metrics on the MCP layer (camt053_mcp.observability).
prometheus-client = ">=0.20,<2"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-asyncio = ">=0.24,<2.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = "^26.3.1"
ruff = ">=0.1,<0.16"
mypy = ">=1.11,<3.0"
interrogate = "^1.7"

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-magic = true
verbose = 1
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "strict"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--cov=camt053_mcp",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    # Load/stress tests (marker ``stress``) are excluded from the default
    # coverage-gated run, mirroring the core camt053 repo; benchmarks
    # (``perf``) are reserved alongside them. Select them explicitly with
    # ``pytest -m stress --no-cov``.
    "-m", "not perf and not stress",
]
markers = [
    "perf: performance/benchmark tests (excluded from the coverage gate)",
    "stress: load/stress and soak tests (excluded from the coverage gate)",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if sys.platform",
    "except Exception:",
    "except \\(RuntimeError, OSError\\)",
]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "camt053.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "camt053_loader_mt940.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "camt053_loader_mt942.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The tools mirror the (untyped) camt053.services facade verbatim, returning
# bare dict/list/str. Relax the two strict checks that signature would trip
# (generic dict/list args and Any propagated from services) while keeping the
# rest of strict mode in force.
module = "camt053_mcp.*"
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment"]
